# modalflow

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  TEST_PLAN.md  pyproject.toml
modalflow/: pyproject.toml
modalflow/src/modalflow/: modal_app.py
modalflow/src/modalflow/executor/: modal_executor.py
src/modalflow/: cli.py  modal_app.py
src/modalflow/executor/: modal_executor.py
tests/system/: environment_variables.env  init.sh  requirements.txt  test_app.py
tests/unit/: test_modal_executor.py
