[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modalflow"
version = "0.1.0"
description = "Serverless Airflow Executor on Modal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=3.0.6",
    "modal>=1.3.0",
    "click>=8.0.0",
]

[project.scripts]
modalflow = "modalflow.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modalflow"]
